04/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed rlctx_prog rl_callback_read_char to respect EOF
    * Changed rlctx_prog to respect the exception set in select loop:
    In cygwin, EOF is detected in the exception set. So this needs to 
    be read.

04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * Automatically building getch_driver and input_driver: This is done
    because 'make' seems to be failing to build the programs correctly
    when they are extra's. Its probably a configure problem that needs to
    be solved.
    * tgdb now works on windows XP in cygwin: Fixed creation of home directory.

03/29/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed all of tgdb's to work with autoconf: All of the files that make up
    tgdb now test to see if a header is available before it is included.

03/28/2003 Bob Rossi <bob_rossi@cox.net>

   * Reversed decision to change BUFFER_USER_COMMAND -> BUFFER_GUI_COMMAND:
   All commands were being outputted back to the user.

03/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Stop adding the enter command to readline's history.
    * A better solution for the misc_prompt commands are under way: This
    allows the user to enter a command during a misc prompt. Tgdb also
    traverses all of the buffered commands, running all commands that the user
    typed and skipping internal commands ( tgdb and gui ).

03/26/2003 Bob Rossi <bob_rossi@cox.net>

    * tgdb now supports the commands feature of gdb: This was broken at
    some point but is now implemented to work correctly. It is treated like a 
    regular prompt.

03/23/2003 Bob Rossi <bob_rossi@cox.net>

    * tgdb now fully supports readline: tgdb now can support commands by using
    readline. It is transparent to the front end.

03/11/2003 Bob Rossi <bob_rossi@cox.net>

    * tgdb now allows a user to enter a command at a misc prompt:
    This fixes the problem where tgdb does not know that it is ok for the 
    user to enter a command at the misc prompt.
