@@ -20,12 +20,27 @@
 #include "data.h"
 #include "globals.h"
 
+
+/* This package looks for annotations coming from gdb's output.
+ * The program that is being debugged does not have its ouput pass
+ * through here. So only gdb's ouput is filtered here.
+ *
+ * This is a simple state machine that is looking for annotations
+ * in gdb's output. Annotations are of the form
+ * '\n\032\032annotation\n'
+ * However, on windows \n gets mapped to \r\n So we take account
+ * for that by matching the form
+ * '\r+\n\032\032annotation\r+\n'
+ * 
+ * When an annotation is found, this unit passes the annotation to the 
+ * annotate unit and this unit is free of all responsibility :)
+ */
+
 static char tgdb_buffer[MAXLINE];
 static size_t tgdb_size = 0;
 
 enum state {
    DATA,          /* data from debugger */
-   CAR_RET,       /* got '\r' */
    NEW_LINE,      /* got '\n' */
    CONTROL_Z,     /* got first ^Z '\032' */
    ANNOTATION,    /* got second ^Z '\032' */
@@ -40,77 +55,20 @@ int a2_handle_data(char *data, size_t size,
    /* track state to find next file and line number */
    for(i = 0; i < size; ++i){
       switch(data[i]){
+         /* Ignore all car returns outputted by gdb */
          case '\r':
-
-            /* This makes sure that '\r' is always returned when
-             * the user is talking with the readline library. It is 
-             * not part of a gdb annotation.
-             */
-//            if ( data_get_state() == USER_AT_PROMPT && 
-//                 (!global_did_user_press_enter() && 
-//                  !global_signal_recieved() &&
-//                  !global_did_user_press_special_control_char()) &&
-//                  !global_has_implicit_enter_benen_recieved())
-//                goto default_;
-
-             switch(tgdb_state){
-               case DATA:        
-                  tgdb_state = CAR_RET;                          
-                  break;
-               case CAR_RET:  
-                  data_process('\r', gui_data, &counter, q);      
-                  break;
-               case NEW_LINE:    
-                  tgdb_state = CAR_RET;
-                  data_process('\r', gui_data, &counter, q);
-                  data_process('\n', gui_data, &counter, q);      
-                  break;
-               case CONTROL_Z:   
-                  tgdb_state = CAR_RET;
-                  data_process('\r', gui_data, &counter, q);
-                  data_process('\n', gui_data, &counter, q);  
-                  data_process('\032', gui_data, &counter, q);    
-                  break;
-               case ANNOTATION:  
-                  tgdb_buffer[tgdb_size++] = data[i];          
-                  break;
-               case NL_DATA:
-                  tgdb_state = CAR_RET; 
-                  break;
-               default:                                                       
-                  err_msg("%s:%d -> Bad state transition", __FILE__, __LINE__);
-                  break;
-            } /* end switch */
             break;
          case '\n':     
-               /* This can happen if the user does not hit the enter key
-                * but a key they hit made return line decide that it would
-                * return the '\n' key. ex. \t\t twice...
-                * This is an error. gdb does not output the post-prompt
-                * annotation. This saves tgdb from not understanding the 
-                * output at all.
-                */
-//               if ( data_get_state() == USER_AT_PROMPT )
-//                   global_set_implicit_enter(1);
-
             switch(tgdb_state){
                case DATA:        
-                  data_process('\n', gui_data, &counter, q);
-                  break;
-               case CAR_RET:
                   tgdb_state = NEW_LINE;
                   break;
-               case NL_DATA:     
-                  tgdb_state = NEW_LINE;
-                  break; 
                case NEW_LINE:    
-                  tgdb_state = DATA;
-                  data_process('\r', gui_data, &counter, q);
+                  tgdb_state = NEW_LINE;
                   data_process('\n', gui_data, &counter, q);    
                   break;
                case CONTROL_Z:   
                   tgdb_state = DATA;
-                  data_process('\r', gui_data, &counter, q);  
                   data_process('\n', gui_data, &counter, q);  
                   data_process('\032', gui_data, &counter, q);    
                   break;
@@ -120,6 +78,9 @@ int a2_handle_data(char *data, size_t size,
                   tgdb_size = 0;                               
                   memset(tgdb_buffer, '\0', MAXLINE);             
                   break;
+               case NL_DATA:     
+                  tgdb_state = NEW_LINE;
+                  break; 
                default:                                                       
                   err_msg("%s:%d -> Bad state transition", __FILE__, __LINE__);
                   break;
@@ -129,11 +90,6 @@ int a2_handle_data(char *data, size_t size,
             switch(tgdb_state){
                case DATA:        
                   tgdb_state = DATA;
-                  data_process('\032', gui_data, &counter, q);  
-                  break;
-               case CAR_RET:
-                  tgdb_state = DATA;
-                  data_process('\r', gui_data, &counter, q);  
                   data_process('\032', gui_data, &counter, q);  
                   break;
                case NEW_LINE:    
@@ -154,7 +110,6 @@ int a2_handle_data(char *data, size_t size,
             } /* end switch */
             break;
          default:
-         default_:
             switch(tgdb_state){
                case DATA:        
                   data_process(data[i], gui_data, &counter, q);  
@@ -163,20 +118,13 @@ int a2_handle_data(char *data, size_t size,
                   tgdb_state = DATA;
                   data_process(data[i], gui_data, &counter, q);  
                   break;
-               case CAR_RET:
-                  tgdb_state = DATA;
-                  data_process('\r', gui_data, &counter, q);     
-                  data_process(data[i], gui_data, &counter, q);  
-                  break;
                case NEW_LINE:    
                   tgdb_state = DATA;
-                  data_process('\r', gui_data, &counter, q);     
                   data_process('\n', gui_data, &counter, q);     
                   data_process(data[i], gui_data, &counter, q);  
                   break;
                case CONTROL_Z:   
                   tgdb_state = DATA;
-                  data_process('\r', gui_data, &counter, q);     
                   data_process('\n', gui_data, &counter, q);                 
                   data_process('\032', gui_data, &counter, q);                 
                   data_process(data[i], gui_data, &counter, q);                 
