@@ -1,5 +1,10 @@
 04/02/2003 Bob Rossi <bob_rossi@cox.net>
 
+    * Changed tgdb to parse annotations in a new way: tgdb now accepts 
+    annotations from gdb in this form '\r+\n\032\032annotation\r+\n'
+
+04/02/2003 Bob Rossi <bob_rossi@cox.net>
+
     * Changed rlctx_prog rl_callback_read_char to respect EOF
     * Changed rlctx_prog to respect the exception set in select loop:
     In cygwin, EOF is detected in the exception set. So this needs to 
